--- a/package.json
+++ b/package.json
@@ -4,20 +4,28 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "test": "vitest",
+        "test:cover": "vitest run --coverage"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
         "@tanstack/react-query-devtools": "^5.87.4",
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/jest-dom": "^6.8.0",
+        "@testing-library/react": "^16.3.0",
         "@types/react": "^19.1.12",
         "@types/react-dom": "^19.1.9",
         "@vitejs/plugin-react": "^5.0.2",
+        "@vitest/coverage-v8": "^3.2.4",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
+        "jsdom": "^26.1.0",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "typescript": "^5.9.2",
-        "vite": "^7.0.4"
+        "vite": "^7.0.4",
+        "vitest": "^3.2.4"
     },
     "dependencies": {
         "@inertiajs/react": "^2.1.5",
