--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-error-boundary": "^6.0.0",
-        "react-hook-form": "^7.62.0"
+        "react-hook-form": "^7.62.0",
+        "recharts": "^3.2.1"
     }
 }
