added path stuff and hardcoded helsinki as example city

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,14 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
-        "types": ["vite/client"]
+        "types": ["vite/client"],
+        "baseUrl": ".",
+        "paths": {
+            "@components/*": ["resources/js/components/*"],
+            "@features/*": ["resources/js/features/*"],
+            "@utils/*": ["resources/js/utils/*"],
+            "@images/*": ["resources/assets/images/*"]
+        }
     },
     "include": ["resources/js"],
     "exclude": ["node_modules"]
