fixed overriding message

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "start": "npm install && npm run build && php artisan serve",
         "build": "vite build",
         "dev": "vite",
         "test": "vitest",
