--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+VITE_GEOAPI=https://api.opencagedata.com/geocode/v1/json
+VITE_GEOAPI_KEY=YOUR_OPENCAGEDATA_API_KEY_HERE_!
