--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "start": "npm install && npm run build && php artisan serve",
+        "start": "npm run build && php artisan serve",
+        "setup": "composer install && npm install && php artisan key:generate",
         "build": "vite build",
         "dev": "vite",
         "test": "vitest",
