--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:ppl4U9xmk5wEJ/TA5ui8ejjPR/rz9zbF+ip0cd1rFAg=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
