--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "scripts": {
         "start": "npm run build && php artisan serve",
-        "setup": "npm install && composer install && php artisan key:generate",
+        "setup": "npm install && composer install && php artisan key:generate && php artisan migrate -y",
         "build": "vite build",
         "dev": "vite",
         "test": "vitest",
