--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "start": "npm run build && php artisan serve",
-        "setup": "npm install && composer install && php artisan key:generate && php artisan migrate --force",
+        "start": "php artisan serve",
+        "setup": "npm install && composer install && php artisan key:generate && php artisan migrate --force && npm run build",
         "build": "vite build",
         "dev": "vite",
         "test": "vitest",
